@@ -1,7 +1,7 @@
 #  File src/library/base/R/tapply.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2015 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -41,7 +41,7 @@ tapply <- function (X, INDEX, FUN = NULL, ..., simplify = TRUE)
     if (is.null(FUN)) return(group)
     ans <- lapply(X = split(X, group), FUN = FUN, ...)
     index <- as.integer(names(ans))
-    if (simplify && all(unlist(lapply(ans, length)) == 1L)) {
+    if (simplify && all(lengths(ans) == 1L)) {
 	ansmat <- array(dim = extent, dimnames = namelist)
 	ans <- unlist(ans, recursive = FALSE)
     } else {
